# suma

./: README.md  pyproject.toml
suma/: __init__.py  lexrank.py  main.py
